--- a/template/star-recept-module.html
+++ b/template/star-recept-module.html
@@ -6,7 +6,7 @@
                     <a href="%!LINK!%"><img src="%!RECEPTKEP!%" alt="recept képe" class="star-recept-kep"></a>
               
             </div>
-            <div class="col-md-5 white star-flex">
+            <div class="col-md-5 white">
                 <h2 class="text-center my-5">%!NEV!%</h2>
                 <div class="star-parameters my-4">
                     <ul class=" m-0 px-3 py-2">
