--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -7,6 +7,7 @@
 
         <div class="col-lg-9 col-sm-12 blokk my-5">
             <h2 class="text-center my-5">%!NEV!%</h2>
+            <h6 class="text-center %!COLOR!%">%!USER!%</h6>
             <div class="parameters my-4">
                 <ul>
                     <li>
