--- a/template/receptek.html
+++ b/template/receptek.html
@@ -104,7 +104,9 @@
                     <input type="hidden" name="time" value="%!TIME!%">
                     <input type="hidden" name="nehezseg" value="%!DIFF!%">
                     <input type="hidden" name="review" value="%!RATING!%">
+                    %!PREV!%
                     %!PAGES!%
+                    %!NEXT!%
                 </form>
             </div>
         </div>
