--- a/template/receptek.html
+++ b/template/receptek.html
@@ -5,13 +5,13 @@
 
 
 
-        <div class="col-lg-3 col-md-4 col-sm-12 my-2 white mx-auto shadow" id="filter-box-collapsed">
+        <div class="col-lg-3 col-md-4 col-sm-12 my-3 white mx-auto shadow" id="filter-box-collapsed">
             <div>
                 <p class="text-center my-3" id="filter-button">szűrők<span style="float: right;"> &#8681;</span></p>
             </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-sm-12 mt-3" id="filter-box">
+        <div class="col-lg-3 col-md-4 col-sm-12 my-3" id="filter-box">
             <div class="filter shadow-sm">
                 <h4 class="p-4">Szűrők</h4>
                 <span class="close-filter" id="close-filter" onclick="closeFilter()">&#8679;</span>
