--- a/core/css/style.css
+++ b/core/css/style.css
@@ -622,22 +622,16 @@ footer {
 }
 
 .star-recept .container {
-    width: 90vw;
+    max-width: 800px;
+}
+
+.star-recept .container .row {
+    margin: auto 20px;
 }
 
 .star-recept .img-wrap{
-    /*height: 100%;*/
+    max-height: 550px;
     overflow: hidden !important;
-}
-
-.star-recept .container .row{
-
-}
-
-/*      !!!!!!!!!!!!!!!!!!                */
-.star-recept .container .row .col-md-7, .col-md-5{
-        max-height: 450px;
-        overflow: hidden;
 }
 
 
@@ -671,9 +665,9 @@ footer {
 
 .star-recept-kep {
     width: 100%;
+    height: 100%;
     overflow: hidden;
     object-fit: cover;
-    object-position: center;
 }
 
 .star-recept-kep:hover {
