--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -6,8 +6,9 @@
 
 
         <div class="col-lg-9 col-sm-12 blokk my-5">
-            <h2 class="text-center my-5">%!NEV!%</h2>
+            <h2 class="text-center mt-5 mb-4">%!NEV!%</h2>
             <h6 class="text-center %!COLOR!%">%!USER!%</h6>
+            <p class="text-center mb-0"><small>%!TIME!%</small></p>
             <div class="parameters my-4">
                 <ul>
                     <li>
@@ -28,7 +29,7 @@
             </div>
 
 
-            <div class="cover">
+            <div class="recepie-img-wrapper">
                 <img class="img-fluid"
                     src="%!RECEPTKEP!%"
                     alt="recept képe">
