--- a/template/slider-recepie-card.html
+++ b/template/slider-recepie-card.html
@@ -1,7 +1,7 @@
 <div class="small-deck">
     <div class="img-wrapper">
         <a href="%!LINK!%">
-        <img class="card-img-top" src="%!KEP!%" alt="recept kep">
+        <img class="card-img-top-slider" src="%!KEP!%" alt="%!NEV!%">
         </a>
     </div>
     <div class="mt-1 text-center">
