--- a/core/css/style.css
+++ b/core/css/style.css
@@ -940,3 +940,24 @@ footer {
 .user-card-deck{
     height: 350px;
 }
+
+.recepie-img-wrapper{
+    width: 100%;
+    max-height: 750px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.recepie-img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-img-top-slider img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
