--- a/template/about.html
+++ b/template/about.html
@@ -36,7 +36,7 @@
         <form method="post" class="mt-5">
             <div class="form-group my-3">
                 <label for="email">Email címed</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="pelda@mail.hu" required>
+                <input type="email" class="form-control" id="email" name="email" placeholder="pelda@mail.hu" value="%!EMAIL!%" required>
             </div>
             <div class="form-group my-3">
                 <label for="subj">Téma</label>
