edit recepie function

--- a/template/user-recept-card.html
+++ b/template/user-recept-card.html
@@ -29,6 +29,7 @@
                 <div class="actions text-center mt-3">
                     <form method="post">
                     <a href="#" class="delete-recept" onclick="deleteRecepie(%!RECEPTID!%)">törlés</a>
+                    <a href="index.php?p=update-recepie&id=%!RECEPTID!%" class="">szerkesztés</a>
                     </form>
                 </div>
             </div>
