--- a/core/css/style.css
+++ b/core/css/style.css
@@ -595,6 +595,11 @@ footer {
 
 .actions a {
     padding: 0 10px;
+    cursor: pointer;
+}
+
+.actions a:hover{
+    opacity: 0.5;
 }
 
 .delete-recept {
@@ -960,4 +965,25 @@ footer {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.button-wrapper{
+    width: 300px;
+    margin: 20px auto -10px auto;
+    text-align: center;
+}
+
+.button-wrapper a {
+    padding: 2px 5px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.button-wrapper a:hover{
+    opacity: .5;
+}
+
+.red-link
+{
+    color: red;
 }
