--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -5,7 +5,8 @@
         <!--     Recept section  -->
 
 
-        <div class="col-lg-9 col-sm-12 blokk my-5">
+        <div class="col-lg-9 col-sm-12 blokk my-5 d-block">
+            %!BUTTONS!%
             <h2 class="text-center mt-5 mb-4">%!NEV!%</h2>
             <h6 class="text-center %!COLOR!%">%!USER!%</h6>
             <p class="text-center mb-0"><small>%!TIME!%</small></p>
@@ -115,3 +116,18 @@
 
 
 <script src="core/scripts/write-review-stars.js"></script>
+<script>
+    function deleteRecepie(receptId) {
+    const userResponse = confirm("Biztosan törölni akarod ezt a receptet?");
+    if (userResponse) {
+                const form = document.createElement("from");
+                form.setAttribute("method", "post")
+                const hiddenInput = document.createElement("input");
+                hiddenInput.type = "hidden";
+                hiddenInput.name = "delete-recepie";
+                hiddenInput.value = receptId;
+                form.appendChild(hiddenInput);
+                form.submit();
+    }
+}
+</script>
