--- a/template/recepie-datapage-buttons.html
+++ b/template/recepie-datapage-buttons.html
@@ -1,4 +1,4 @@
 <div class="button-wrapper">
     <a href="index.php?p=update-recepie&id=%!RECEPTID!%" class="">szerkesztés</a>
-    <a href="" onclick="deleteRecepie(%!RECEPTID!%)" class="red-link" >törlés</a>
+    <a href="#" onclick="deleteRecepie(%!RECEPTID!%)" class="red-link" >törlés</a>
 </div>
