--- a/template/update-recepie.html
+++ b/template/update-recepie.html
@@ -12,9 +12,9 @@
 
 
         <div class="form-group py-3">
-            <label for="formFile" class="form-label">Kép feltöltése</label>
+            <label for="formFile" class="form-label">Kép cseréje</label>
             <input class="form-control" type="file" id="formFile" accept="%!ACCEPT!%" name="img">
-            <img src="%!RECEPTKEP!%" alt="%!NEV!%" class="my-2" style="width: 250px;" id="receptkep">
+            <img src="%!RECEPTKEP!%" alt="%!NEV!%" class="my-2" id="receptkep">
         </div>
 
         <div class="container mt-3">
