--- a/template/404.html
+++ b/template/404.html
@@ -23,6 +23,7 @@
         <img src="content/logo.png" alt="logo" style="width: 200px;" class="mb-4">
         <div class="text-center">
             <h1>%!CONTENT!%</h1>
+            <a href="index.php">Vissza a főloldalra</a>
         </div>
     </div>
     </div>
