--- a/template/recept-thumbnail.html
+++ b/template/recept-thumbnail.html
@@ -1,21 +1,19 @@
-<div class="recept-thumbnail mb-2">
+<div class="recept-thumbnail mb-4">
     <div class="row">
+
         <div class="col-4">
-            <div class="img-container"><img class=""
-                    src="%!RECEPTKEP!%"
-                    alt="recept képe"></div>
+            <div class="img-container"><img class="card-img-top" src="%!RECEPTKEPTHUMB!%" alt="%!RECEPTNEV!% kép">
+            </div>
         </div>
+
         <div class="col-8 mt-1 mb-3">
-            <a style="text-decoration: none; color: var(--primary-color)" href="#" id="thumb-link">%!RECEPTNEV!%</a>
+            <div class="title-wrapper-thumb"><a style="text-decoration: none; color: var(--primary-color)" href="#" id="thumb-link">%!RECEPTNEV!%</a></div>
+            <div>
+                <small><span>%!IDOTH!%</span> perc |</small>
+                <small><span>%!ADAGTH!%</span> adag |</small>
+                <small>%!NEHEZSEGTH!%</small>
+            </div>
         </div>
+
     </div>
-    <div>
-        <small><span>%!IDO!%</span> perc |</small>
-        <small><span>%!ADAG!%</span> adag |</small>
-        <small>%!NEHEZSEG!%</small>
-    </div>
-    <div class="thumbnail-reviews">
-       
-    </div>
-    <div class="devider-small"></div>
 </div>
