--- a/template/permission_denied.html
+++ b/template/permission_denied.html
@@ -20,7 +20,7 @@
 
 <body style="background-image: url('content/background-pattern.png');">
     <div class="d-flex justify-content-center align-items-center vh-100" style="flex-direction: column;">
-        <img src="content/Logo.png" alt="logo" style="width: 200px;" class="mb-4">
+        <img src="content/logo.png" alt="logo" style="width: 200px;" class="mb-4">
         <div class="text-center">
             <h1>%!CONTENT!%</h1>
             <a href="index.php" class="py-3">vissza a főoldalra ></a>
