--- a/template/recept-thumbnail.html
+++ b/template/recept-thumbnail.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="col-8 mt-1 mb-3">
-            <div class="title-wrapper-thumb"><a style="text-decoration: none; color: var(--primary-color)" href="#" id="thumb-link">%!RECEPTNEV!%</a></div>
+            <div class="title-wrapper-thumb"><a style="" href="index.php?p=recept-aloldal&r=%!RECPTIDTH!%" id="thumb-link">%!RECEPTNEV!%</a></div>
             <div>
                 <small><span>%!IDOTH!%</span> perc |</small>
                 <small><span>%!ADAGTH!%</span> adag |</small>
