--- a/core/css/style.css
+++ b/core/css/style.css
@@ -634,7 +634,6 @@ footer {
 }
 
 #register-box {
-    margin-top: -140px;
     height: auto;
 }
 
@@ -862,11 +861,12 @@ footer {
 }
 
 .title-wrapper-thumb {
-    height: 50px;
+    height: 25px;
     display: -webkit-box;
     -webkit-line-clamp: 2; /* Number of lines before truncation */
     -webkit-box-orient: vertical;
     overflow: hidden;
+    font-size: 14px;
 }
 
 
@@ -1043,4 +1043,48 @@ footer {
     display: block;
     margin: auto;
     width: 300px;
+}
+
+#profil-pic-icon{
+    display: block;
+    position: absolute;
+    right: 25px;
+    bottom: 10px;
+    width: 30px;
+    height: 30px;
+    transition: all ease .2s;
+    cursor: pointer;
+}
+
+#profil-pic-icon:hover{
+    transform: scale(1.1);
+}
+
+#img-form{
+    display: block;
+    position: absolute;
+    width: 500px;
+    border-radius: 15px;
+    top: 150px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: auto;
+    z-index: 100;
+    box-shadow: 8px 8px 20px 8px rgb(0 0 0 / 20%);
+}
+
+#img-form #close-btn{
+    float: right;
+    padding: 5px;
+    margin-top: -25px;
+    margin-right: -15px;
+    transition: all ease .3s;
+}
+
+#img-form #close-btn:hover{
+   opacity: .5;
+}
+
+.blur{
+    filter: blur(3px);
 }
