--- a/template/recept-thumbnail.html
+++ b/template/recept-thumbnail.html
@@ -1,4 +1,4 @@
-<div class="recept-thumbnail mb-4">
+<div class="recept-thumbnail mb-3">
     <div class="row">
 
         <div class="col-4">
@@ -6,8 +6,8 @@
             </div>
         </div>
 
-        <div class="col-8 mt-1 mb-3">
-            <div class="title-wrapper-thumb"><a style="" href="index.php?p=recept-aloldal&r=%!RECPTIDTH!%" id="thumb-link">%!RECEPTNEV!%</a></div>
+        <div class="col-8 mt-1 my-0">
+            <div class="title-wrapper-thumb"><a href="index.php?p=recept-aloldal&r=%!RECPTIDTH!%" id="thumb-link">%!RECEPTNEV!%</a></div>
             <div>
                 <small><span>%!IDOTH!%</span> perc |</small>
                 <small><span>%!ADAGTH!%</span> adag |</small>
