--- a/core/css/style.css
+++ b/core/css/style.css
@@ -1063,12 +1063,11 @@ footer {
 #img-form{
     display: block;
     position: absolute;
-    width: 500px;
     border-radius: 15px;
     top: 150px;
     left: 50%;
+    max-width: 500px;
     transform: translateX(-50%);
-    margin: auto;
     z-index: 100;
     box-shadow: 8px 8px 20px 8px rgb(0 0 0 / 20%);
 }
