--- a/template/navItemLogin.html
+++ b/template/navItemLogin.html
@@ -1,10 +1,10 @@
 
-    <li class="nav-item dropdown">
+    <li class="nav-item dropdown profile">
         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
-            <img src="%!IMG!%" alt="Profile"
-                style="width: 23px; border-radius: 50%; margin-right: 2px; margin-top: -5px;">
-            %!NAME!%
+            <div class="profil-pic-icon-wrapper">
+                <img src="%!IMG!%" alt="%!NAME!% profil icon" class="profil-icon-img">
+            </div>
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
             <li><a class="dropdown-item" href="index.php?p=account">Receptjeim</a></li>
