--- a/template/recept-datasheet.html
+++ b/template/recept-datasheet.html
@@ -97,7 +97,7 @@
             <h4 class="text-center my-5">Hasonló receptek</h4>
 
 
-            %!RECEPTTHUMBNAILS!%
+            <div class="sticky">%!RECEPTTHUMBNAILS!%</div>
 
 
 
