--- a/template/account-page.html
+++ b/template/account-page.html
@@ -47,7 +47,15 @@
                         <img src="%!COVERIMG!%" alt="cover-pic" class="img-fluid">
                     </div>
 
-                    <div class="row p-5">
+                    <div class="row py-3 px-5">
+
+                        <div class="container text-center pb-3">
+                            <form method="post">
+                                %!PREV!%
+                                %!PAGES!%
+                                %!NEXT!%
+                            </form>
+                        </div>
 
 
 
@@ -58,6 +66,14 @@
 
 
 
+                    </div>
+
+                    <div class="container text-center pb-3">
+                        <form method="post">
+                            %!PREV!%
+                            %!PAGES!%
+                            %!NEXT!%
+                        </form>
                     </div>
                 </div>
             </div>
