--- a/template/recept-card.html
+++ b/template/recept-card.html
@@ -1,6 +1,7 @@
-<div class=" col-lg-4 col-sm-6 mb-5">
-    <div class="card-deck shadow rounded" id="%!RECEPTID!%">
-        <div class="card">
+<div class=" col-lg-4 col-sm-6 mb-5"  id="card-%!RECEPTID!%">
+    <div class="card-deck shadow rounded d-block" id="%!RECEPTID!%">
+        %!HEART!%
+        <div class="card"">
             <a href="%!RECEPTLINK!%">
                 <div class="card-img-wrapper">
                     <img class="card-img-top"
