--- a/template/receptek.html
+++ b/template/receptek.html
@@ -2,9 +2,7 @@
 
 <div class="wrapper">
     <div class="row">
-
-
-
+        
         <div class="col-lg-3 col-md-4 col-sm-12 my-3 white mx-auto shadow" id="filter-box-collapsed">
             <div>
                 <p class="text-center my-3" id="filter-button">szűrők<span style="float: right;"> &#8681;</span></p>
@@ -130,3 +128,4 @@
 </div>
 
 <script src="core/scripts/szurok.js"></script>
+<script src="core/scripts/favApi.js"></script>
