--- a/template/user-recept-card.html
+++ b/template/user-recept-card.html
@@ -1,5 +1,6 @@
 <div class=" col-lg-4 col-sm-6 mb-5 user-card-deck">
     <div class="card-deck shadow rounded" id="%!RECEPTID!%">
+        %!HEART!%
         <div class="card">
             <a href="%!RECEPTLINK!%">
                 <div class="card-img-wrapper">
