--- a/template/navItemLogin.html
+++ b/template/navItemLogin.html
@@ -8,7 +8,7 @@
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
             <li><a class="dropdown-item" href="index.php?p=account">Receptjeim</a></li>
-            <li><a class="dropdown-item" href="index.php?p=favorites">Kedvenceim</a></li>
+            <li><a class="dropdown-item" href="index.php?p=favorites">Kedvencek</a></li>
             %!ADMIN!%
             <li>
                 <hr class="dropdown-divider">
