refactor + keep login

--- a/template/login.html
+++ b/template/login.html
@@ -11,6 +11,10 @@
                 <label for="password" class="form-label">Jelszó</label>
                 <input type="password" name="pass" class="form-control" id="password" placeholder="Jelszó megadása" required>
             </div>
+            <div class="custom-control custom-checkbox text-center">
+                <input type="checkbox" class="custom-control-input" id="customCheck1" checked name="keep">
+                <label class="custom-control-label small" for="customCheck1">maradjak bejelentkezve.</label>
+            </div>
             <button type="submit" class="btn btn-default w-100 mt-3" name="login">Bejelentkezés</button>
         </form>
         <div class="text-center mt-3">
